# parsfet

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run_tests.py  tailwind.config.js
.Jules/: palette.md
.github/workflows/: python-package.yml  security.yml
.jules/: sentinel.md
docs/source/: conf.py  index.rst  math_explanation.rst  modules.rst  parsfet.comparators.rst  parsfet.models.rst  parsfet.normalizers.rst  parsfet.parsers.rst  parsfet.reporting.rst  parsfet.rst  user_guide.rst
docs/source/_static/css/: custom.css
presentation/: package-lock.json  package.json  slides.md  vite.config.ts
presentation/public/: parsfet-0.3.0a1-py3-none-any.whl  sample.lib
presentation/setup/: monaco.ts
scripts/: copy_assets.js
src/parsfet/: __init__.py  cli.py  data.py  exceptions.py  log_utils.py  path_delay.py  plotting.py
src/parsfet/comparators/: __init__.py  cell_diff.py  fingerprint.py
src/parsfet/models/: __init__.py  common.py  export.py  lef.py  liberty.py  physical.py
src/parsfet/normalizers/: __init__.py  boolean.lark  classifier.py  classifier_legacy.py  invd1.py
src/parsfet/parsers/: __init__.py  base.py  lef.lark  lef.py  lef_legacy.py  liberty.lark  liberty.py  liberty_json.py  liberty_legacy.py
src/parsfet/reporting/: __init__.py  csv_generator.py  html_generator.py
src/parsfet/static/css/: input.css
src/parsfet/templates/: report_master_detail.html
tests/: conftest.py  test_base_parser.py  test_cell_diff.py  test_classifier.py  test_cli.py  test_combine.py  test_combine_json.py  test_comparators.py  test_csv_security.py  test_data.py  test_dataset_vector.py  test_html_security.py  test_leakage.py  test_lef.py  test_liberty.py  test_liberty_lark.py  test_log_security.py  test_path_delay.py  test_power_model.py  test_reporting_assets.py  test_reporting_html.py  test_reporting_math.py  test_security_reporting.py  test_sri_hashes.py  test_ux_enhancements.py  test_ux_interaction.py
