[project]
name = "parsfet"
dynamic = ["version"]
description = "VLSI Process Technology Abstraction Framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sebastian-L"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "rich>=13.0",
    "typer>=0.9",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "lark>=1.3.1",
]

[project.urls]
Homepage = "https://github.com/sebastianlhw/parsfet"
Issues = "https://github.com/sebastianlhw/parsfet/issues"
Repository = "https://github.com/sebastianlhw/parsfet"

[project.optional-dependencies]
ml = ["scikit-learn>=1.3", "umap-learn>=0.5"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "furo>=2023.9.10",
    "sphinx-copybutton>=0.5.2",
]

[project.scripts]
parsfet = "parsfet.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/parsfet/static",
]

[tool.hatch.build.targets.wheel]
packages = ["src/parsfet"]
include = [
    "src/parsfet/static",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/parsfet/_version.py"

[tool.pytest.ini_options]
addopts = "--cov=parsfet"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["testdata", "output"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["parsfet"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B105", # False positive: Parser keywords ("PORT", "VIA") detected as passwords
    "B110", # Intentional: Graceful degradation in CLI (skip optional fingerprinting)
    "B112", # Intentional: Skip problematic cells in report generation
]
